Changed displayName to uppercase

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ruby-constant-vision",
-  "displayName": "ruby-constant-vision",
+  "displayName": "RubyConstantVision",
   "description": "Enhance your Ruby development experience by providing instant visibility into constants and their corresponding namespaces. Simply focus on a constant and explore potential matching namespaces directly within your coding environment.",
   "version": "0.0.1",
   "engines": {
