Constrained the extension's scope to .rb files and ensured it activates only when an .rb file is opened

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "Other"
   ],
   "activationEvents": [
-    "*"
+    "onLanguage:ruby"
   ],
   "main": "./dist/extension.js",
   "contributes": {
@@ -18,6 +18,12 @@
       {
         "command": "ruby-constant-vision.helloWorld",
         "title": "Hello World"
+      }
+    ],
+    "languages": [
+      {
+          "id": "ruby",
+          "extensions": [ ".rb" ]
       }
     ]
   },
