--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Enhance your Ruby development experience by providing instant visibility into constants and their corresponding namespaces. Simply select a constant and explore potential matching namespaces directly within your coding environment.",
   "license": "MIT",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hogucc/ruby-constant-vision.git"
+  },
   "engines": {
     "vscode": "^1.83.0"
   },
